--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,58 +1,55 @@
 name: CI/CD Pipeline
+
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+
 jobs:
   build-and-push:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
+      # 1. Checkout source repo
+      - name: Checkout
         uses: actions/checkout@v3
-      - name: Login to GitHub Container Registry
+
+      # 2. Login DockerHub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.CR_PAT }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      # 3. Setup Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - name: Build and push Docker image
+
+      # 4. Build & push Docker image
+      - name: Build and push image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
           tags: |
-            ghcr.io/${{ github.repository }}:latest
-            ghcr.io/${{ github.repository }}:${{ github.sha }}
+            theopen4/testgitopsimage:latest
+            theopen4/testgitopsimage:${{ github.sha }}
+
+      # 5. Update GitOps repo with new image tag
       - name: Update GitOps repository
-        shell: bash
         env:
-          GIT_TOKEN: ${{ secrets.GITOPS_PAT }}
+          TOKEN: ${{ secrets.GITOPS_PAT }}
         run: |
-          # Configure git credential store
-          git config --global credential.helper store
-          echo "https://${GIT_TOKEN}:x-oauth-basic@github.com" > ~/.git-credentials
-          
-          # Remove any existing gitops directory
-          rm -rf gitops
-          
-          # Clone repository using HTTPS URL without token
-          git clone https://github.com/rslim087a/grade-api-gitops.git gitops
-          cd gitops
-          
-          if [[ "$OSTYPE" == "darwin"* ]]; then
-            sed -i '' "s|image: ghcr.io/${{ github.repository }}:.*|image: ghcr.io/${{ github.repository }}:${{ github.sha }}|g" deployment.yaml
-          else
-            sed -i "s|image: ghcr.io/${{ github.repository }}:.*|image: ghcr.io/${{ github.repository }}:${{ github.sha }}|g" deployment.yaml
-          fi
-          
-          # Commit changes
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
+          git clone https://github.com/theopen4/grade-api-gitops.git
+          cd grade-api-gitops
+      
+          # Modifier l'image dans deployment.yaml
+          sed -i "s|image: .*|image: theopen4/testgitopsimage:${{ github.sha }}|g" deployment.yaml
+      
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+      
           git add deployment.yaml
           git commit -m "Update image to ${{ github.sha }}"
-          
-          # Push
-          git push -f https://${GIT_TOKEN}@github.com/rslim087a/grade-api-gitops.git main
+      
+          # Push avec authentification en HTTPS
+          git push https://theopen4:${TOKEN}@github.com/theopen4/grade-api-gitops.git main
